# 4r7a

./: .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  Smolfile  agent_list.md  memory.md  project_install.md  pyproject.toml  sfile  vmspec.toml
.cursor/: hooks.json
.cursor/hooks/: pre_ship_gate.py
.cursor/rules/: access-control.mdc  agent-construction.mdc  agent-eval.mdc  agent-lifecycle.mdc  agent-onboarding.mdc  agent-organization.mdc  agent-runtime.mdc  agent-scheduling.mdc  governance.mdc  naming.mdc  platform-boundary.mdc  solo-maintainer.mdc  wiki-data-flow.mdc
.cursor/skills/4r7a-bridge/: SKILL.md
.cursor/skills/4r7a-install/: SKILL.md
.cursor/skills/no-sus-agent-doctor/: SKILL.md
.github/workflows/: ci.yml
config/: admin_console.yaml  bridge.yaml  discord_channels.json  engineering.yaml  external_sources.yaml  finance.yaml  growth.yaml  hr.yaml  hr_seed.yaml  install_profile.yaml  members.yaml  models.yaml  notion.yaml  operations.yaml  product.yaml  product_catalog.yaml  roster.yaml  web_search.yaml  wiki.yaml
docs/: design_before_build.md  design_process.md  development.md  doc-style.md  doc_style.md  hygiene_checklist.md  tabled.md
docs/agents/: README.md  admin.md  bridge.md  employee_wiki.md  engineering.md  external_wiki.md  finance.md  growth.md  hr.md  operations.md  product.md
docs/plans/: crm-redesign.md  discord.md  employee-wiki.md  external-wiki-mount.md  llm_telemetry.md  notion.md  slack.md  tabled-revisit-2026-07.md
scripts/: setup_wiki.py
src/company_brain/: __init__.py  cli.py  config.py  external_sources_config.py  members_config.py  notify.py  roster_config.py
src/company_brain/admin_console/: __init__.py  app.py  assist.py  audit.py  auth.py  config.py  costs.py  dispatch.py  heartbeats.py  review.py  server.py  wiki_ops.py
src/company_brain/agents/: base.py  gates.py  result.py
src/company_brain/bridge/: __init__.py  config.py  events.py  index.py  mcp_http.py  rate_limit.py  read_gate.py  tokens.py  tools.py
src/company_brain/cli_commands/: __init__.py  admin.py  (+5 more)
tests/: conftest.py  test_absorb_lanes_burst_planner.py  test_action_items.py  test_admin_console.py  test_admin_console_review_sso.py  test_admin_llm_ops.py  test_admin_operators.py  test_admin_scouts_kl.py  test_bridge.py  test_citation_query_hij.py  test_cli_commands.py  test_connection_crm.py  test_cost_gates.py  test_crm_notion_sync.py  test_crm_promotion.py  test_crm_registry.py  test_crm_retention.py  test_discord_community.py  test_discord_ingest.py  test_discord_sessions_678.py  test_doctor.py  test_employee_notion_sync.py  test_employee_wiki.py  test_employee_wiki_import.py  test_employee_wiki_materializers.py  test_external_wiki_mount.py  test_finance_wiki_flow.py  test_fleet_gate.py  test_format_append_section.py  test_gate_migration.py  test_gcal.py  test_gmail_classify.py  test_gmail_phase2.py  test_gmail_phase3.py  test_gmail_phase4.py  test_gmail_profiles.py  test_google_ads_client.py  test_google_ads_manager.py  test_google_ads_specialists.py  test_granola_ingest.py  (+44 more)
tests/fixtures/: gmail_classify_cases.yaml
(+443 files in other folders)
