[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "company-brain"
version = "0.1.0"
description = "The automated platform that covers any information circulation within a company"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.33.0",      # CVE-2026-25645 patched
    "python-dotenv>=1.2.2",  # CVE-2026-28684 patched
    "slack-sdk>=3.27",
    "websockets>=12.0",
    "claude-agent-sdk>=0.1",
    # OpenAI Agents SDK is the provider-flexible path (OpenAI, Anthropic via
    # LiteLLM, or a self-hosted/remote open-source GLM-5 OpenAI-compatible
    # endpoint). The [litellm] extra enables the 100+ provider model adapters.
    "openai-agents[litellm]>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
google-ads = [
    "google-ads>=28.0",
]

[project.scripts]
company-brain = "company_brain.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
